fixed reply on chrome with overflow property

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1010,6 +1010,7 @@ p.network
 p.network.reply
 {
 	max-width:350px;
+	overflow-wrap:break-word;
 }
 
 p.network.date
